--- a/Main/SEToolbox/SEToolbox/Views/ControlFloatingObject.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlFloatingObject.xaml
@@ -35,5 +35,7 @@
         </ToolBarPanel>
         <Label Grid.Row="2" Content="Type:"/>
         <TextBlock Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Text="{Binding SubTypeName}" />
+        <Label Grid.Row="3" Content="Distance:"/>
+        <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0}'}" />
     </Grid>
 </UserControl>
