--- a/Main/SEToolbox/SEToolbox/Views/ControlFloatingObject.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlFloatingObject.xaml
@@ -36,6 +36,6 @@
         <Label Grid.Row="2" Content="Type:"/>
         <TextBlock Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Text="{Binding SubTypeName}" />
         <Label Grid.Row="3" Content="Distance:"/>
-        <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0}'}" />
+        <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
     </Grid>
 </UserControl>
