--- a/Main/SEToolbox/SEToolbox/Views/ControlCharacter.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCharacter.xaml
@@ -33,16 +33,10 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Label>Character</Label>
-        <ToolBarPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
+        <!--<ToolBarPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
             <ToolBar>
-                <Button Command="{Binding DeleteObjectCommand}">
-                    <StackPanel Orientation="Horizontal">
-                        <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=delete2}" Margin="0,0,2,0" />
-                        <AccessText>Delete</AccessText>
-                    </StackPanel>
-                </Button>
             </ToolBar>
-        </ToolBarPanel>
+        </ToolBarPanel>-->
         <Label Grid.Row="2" Content="Suit:"/>
         <ComboBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" ItemsSource="{Binding Source={StaticResource MyCharacterModelEnum}}" SelectedItem="{Binding CharacterModel, Mode=TwoWay}">
             <ComboBox.ItemTemplate>
