--- a/Main/SEToolbox/SEToolbox/Views/ControlFloatingObject.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlFloatingObject.xaml
@@ -23,16 +23,10 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Label Grid.ColumnSpan="2">Floating Object</Label>
-        <ToolBarPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
+        <!--<ToolBarPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
             <ToolBar>
-                <Button Command="{Binding DeleteObjectCommand}">
-                    <StackPanel Orientation="Horizontal">
-                        <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=delete2}" Margin="0,0,2,0" />
-                        <AccessText>Delete</AccessText>
-                    </StackPanel>
-                </Button>
             </ToolBar>
-        </ToolBarPanel>
+        </ToolBarPanel>-->
         <Label Grid.Row="2" Content="Type:"/>
         <TextBlock Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Text="{Binding SubTypeName}" />
         <Label Grid.Row="3" Content="Distance:"/>
