--- a/Main/SEToolbox/SEToolbox/App.xaml
+++ b/Main/SEToolbox/SEToolbox/App.xaml
@@ -34,15 +34,16 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Separator}">
-                        <Grid Margin="3" Width="2">
-                            <Rectangle Fill="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" Width="1" HorizontalAlignment="Right"/>
-                            <Rectangle Fill="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Width="1" HorizontalAlignment="Left"/>
-                        </Grid>
+                        <Rectangle Fill="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" Width="1" Margin="3"/>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
 
+        <Style x:Key="ToolBarMenu" TargetType="{x:Type Menu}">
+            <Setter Property="Panel.Background" Value="Transparent" />
+        </Style>
+        
         <ObjectDataProvider x:Key="ClassTypeEnum" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
             <ObjectDataProvider.MethodParameters>
                 <x:Type TypeName="interop:ImportClassType" />
@@ -65,6 +66,49 @@
                     </Setter>
                 </Trigger>
             </Style.Triggers>
+        </Style>
+
+        <SolidColorBrush x:Key="WindowBackgroundBrush" Color="#FFF" />
+        <SolidColorBrush x:Key="SolidBorderBrush" Color="#888" />
+        <SolidColorBrush x:Key="DisabledForegroundBrush" Color="#888" />
+
+        <Style x:Key="ToolBarTopMenuitem" TargetType="MenuItem">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <!-- Previously x:Key="{x:Static MenuItem.TopLevelHeaderTemplateKey}"-->
+                    <ControlTemplate  TargetType="MenuItem">
+                        <Border Name="Border" BorderThickness="1" BorderBrush="Transparent">
+                            <Grid>
+                                <StackPanel Orientation="Horizontal" Margin="2,2,2,2">
+                                    <ContentPresenter Name="Icon" Margin="0,0,0,0" VerticalAlignment="Center" ContentSource="Icon"/>
+                                    <ContentPresenter Margin="2,0,0,0" ContentSource="Header" RecognizesAccessKey="True" />
+                                </StackPanel>
+                                <Popup Name="Popup" Placement="Bottom" IsOpen="{TemplateBinding IsSubmenuOpen}" AllowsTransparency="True" Focusable="False" PopupAnimation="Fade">
+                                    <Border Name="SubmenuBorder" SnapsToDevicePixels="True" Background="{StaticResource WindowBackgroundBrush}" BorderBrush="{StaticResource SolidBorderBrush}" BorderThickness="1" >
+                                        <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Cycle" />
+                                    </Border>
+                                </Popup>
+                            </Grid>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSuspendingPopupAnimation" Value="true">
+                                <Setter TargetName="Popup" Property="PopupAnimation" Value="None"/>
+                            </Trigger>
+                            <Trigger Property="IsHighlighted" Value="true">
+                                <Setter TargetName="Border" Property="Background" Value="#FFc2e0ff"/>
+                                <Setter TargetName="Border" Property="BorderBrush" Value="#ff3399ff"/>
+                            </Trigger>
+                            <Trigger SourceName="Popup" Property="Popup.AllowsTransparency" Value="True">
+                                <Setter TargetName="SubmenuBorder" Property="CornerRadius" Value="0,0,4,4"/>
+                                <Setter TargetName="SubmenuBorder" Property="Padding" Value="0,0,0,3"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
 
     </Application.Resources>
